Include All L1 neurons (1.2)

--- a/cortical_metric_table.ipynb
+++ b/cortical_metric_table.ipynb
@@ -27,7 +27,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Original: 40294 cells,   filtered: 8669 cells\n"
+      "Original: 40294 cells,   filtered: 8799 cells\n"
      ]
     },
     {
@@ -220,6 +220,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ALL_L1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>2.00</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>25.90</td>\n",
+       "      <td>28.65</td>\n",
+       "      <td>3.37</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>EXC_L23</th>\n",
        "      <td>203</td>\n",
@@ -515,6 +533,7 @@
       "text/plain": [
        "           n_cells_BO  n_cells_FC  g_osi_dg  g_dsi_dg  pref_sf_sg  pref_tf_dg  \\\n",
        "cell_type                                                                       \n",
+       "ALL_L1             50          91      0.18      0.11        0.04        2.00   \n",
        "EXC_L23           203         300      0.30      0.19        0.04        2.00   \n",
        "EXC_L4            301         328      0.20      0.12        0.04        2.00   \n",
        "EXC_L5            482         493      0.19      0.08        0.04        2.00   \n",
@@ -534,6 +553,7 @@
        "\n",
        "           firing_rate_sp  firing_rate_rf  firing_rate_dg  width_rf  \\\n",
        "cell_type                                                             \n",
+       "ALL_L1               0.83            0.00            0.40     25.90   \n",
        "EXC_L23              0.27            0.29            0.66     13.05   \n",
        "EXC_L4               1.06            1.01            2.05     25.28   \n",
        "EXC_L5               2.22            2.41            4.47     32.85   \n",
@@ -553,6 +573,7 @@
        "\n",
        "           height_rf  fano_dg  frac_highpass  frac_bandpass  frac_lowpass  \n",
        "cell_type                                                                  \n",
+       "ALL_L1         28.65     3.37           0.83           0.17           NaN  \n",
        "EXC_L23        14.68     2.73           0.54           0.29          0.18  \n",
        "EXC_L4         28.29     3.31           0.61           0.30          0.09  \n",
        "EXC_L5         37.05     3.14           0.71           0.23          0.06  \n",
@@ -650,6 +671,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ALL_L1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>2.34</td>\n",
+       "      <td>2.93</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>1.34</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>16.26</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>EXC_L23</th>\n",
        "      <td>203</td>\n",
@@ -945,6 +984,7 @@
       "text/plain": [
        "           n_cells_BO  n_cells_FC  g_osi_dg  g_dsi_dg  pref_sf_sg  pref_tf_dg  \\\n",
        "cell_type                                                                       \n",
+       "ALL_L1             50          91      0.33      0.26        0.06        2.34   \n",
        "EXC_L23           203         300      0.36      0.25        0.10        2.48   \n",
        "EXC_L4            301         328      0.26      0.17        0.11        2.83   \n",
        "EXC_L5            482         493      0.27      0.12        0.10        3.56   \n",
@@ -964,6 +1004,7 @@
        "\n",
        "           firing_rate_sp  firing_rate_rf  firing_rate_dg  width_rf  \\\n",
        "cell_type                                                             \n",
+       "ALL_L1               2.93            0.77            1.34      2.35   \n",
        "EXC_L23              1.00            1.28            1.39     13.30   \n",
        "EXC_L4               2.52            2.75            3.52     26.94   \n",
        "EXC_L5               4.03            4.40            5.68     34.17   \n",
@@ -983,6 +1024,7 @@
        "\n",
        "           height_rf  fano_dg  frac_highpass  frac_bandpass  frac_lowpass  \n",
        "cell_type                                                                  \n",
+       "ALL_L1         16.26     4.28           0.83           0.17           NaN  \n",
        "EXC_L23        20.43     3.90           0.54           0.29          0.18  \n",
        "EXC_L4         30.80    55.90           0.61           0.30          0.09  \n",
        "EXC_L5         38.27     4.60           0.71           0.23          0.06  \n",
@@ -1080,6 +1122,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ALL_L1</th>\n",
+       "      <td>50</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.89</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>26.06</td>\n",
+       "      <td>14.63</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>EXC_L23</th>\n",
        "      <td>203</td>\n",
@@ -1375,6 +1435,7 @@
       "text/plain": [
        "           n_cells_BO  n_cells_FC  g_osi_dg  g_dsi_dg  pref_sf_sg  pref_tf_dg  \\\n",
        "cell_type                                                                       \n",
+       "ALL_L1             50          91      0.04      0.04        0.01        0.20   \n",
        "EXC_L23           203         300      0.02      0.01        0.01        0.12   \n",
        "EXC_L4            301         328      0.01      0.01        0.01        0.13   \n",
        "EXC_L5            482         493      0.01      0.01        0.00        0.13   \n",
@@ -1394,6 +1455,7 @@
        "\n",
        "           firing_rate_sp  firing_rate_rf  firing_rate_dg  width_rf  \\\n",
        "cell_type                                                             \n",
+       "ALL_L1               0.89            0.17            0.19     26.06   \n",
        "EXC_L23              0.09            0.26            0.10      4.98   \n",
        "EXC_L4               0.16            0.17            0.17      1.96   \n",
        "EXC_L5               0.15            0.18            0.15      0.97   \n",
@@ -1413,6 +1475,7 @@
        "\n",
        "           height_rf  fano_dg  frac_highpass  frac_bandpass  frac_lowpass  \n",
        "cell_type                                                                  \n",
+       "ALL_L1         14.63     0.39           0.15           0.15           NaN  \n",
        "EXC_L23         1.38     0.24           0.04           0.04          0.03  \n",
        "EXC_L4          1.09    51.61           0.04           0.03          0.02  \n",
        "EXC_L5          1.20     0.19           0.03           0.02          0.01  \n",
